libs/modkit/macros/tests/ui/fail/unknown_capability.stderr
error: unknown capability 'foo', expected one of: db, rest, rest_host, stateful
 --> tests/ui/fail/unknown_capability.rs:3:34
  |
3 | #[module(name="x", capabilities=[foo])]
  |                                  ^^^
